--- a/gui.html
+++ b/gui.html
@@ -6,15 +6,12 @@
     <script src="js/jquery.numeric.min.js"></script>
     <script src="js/semantic.min.js"></script>
     <script src="js/ui.js"></script>
+    <script src="js/api.js"></script>
+    <script src="js/api.calls.js"></script>
     <link rel="stylesheet" href="css/semantic.min.css">
     <script>
-    var drivers = {
-        'lpd8806': 'LPD8806 (SPI)',
-        'serial': 'Serial (AllPixel)',
-        'ws2801': 'WS2801 (SPI)',
-        'visualizer': 'Visualizer'
-    }
-
+    var _drivers = null;
+    var _controlMap = {};
 
     $(document)
         .ready(function() {
@@ -22,35 +19,88 @@
             $('.menu .item')
                 .tab();
 
-            $("#selDriver")._dropdown({
-            	data: drivers,
+            function insert_int($node, params){
+            	return $node._nud({
+            		label: params.label,
+	                placeholder: params.placeholder,
+	                default: params.default,
+	                min: params.min,
+	                max: params.max,
+	                step: params.step
+            	});
+            }
+
+            function insert_str($node, params){
+
+            }
+
+            function insert_combo($node, params){
+            	return $node._dropdown({
+            		label: params.label,
+	                placeholder: params.placeholder,
+	                default: params.default,
+	                data: params.options
+            	});
+            }
+
+            var insertFuncs = {
+            	"int":insert_int,
+            	"str":insert_str,
+            	"combo":insert_combo
+            }
+            function showParams($node, params){
+            	$node.empty();
+            	$.each(params, function(i,v){
+            		$node.append('<div class="ui hidden divider"></div>');
+            		$($node.append('<div id="' + v.id + '"></div>'));
+            		$n = $node.children("#" + v.id);
+            		insertFuncs[v.type]($n, v);
+            	});
+            }
+
+            function driverChanged(id, val){
+            	showParams($("#param_controls"), _drivers[val].params);
+            }
+
+            $("#driver_selection")._dropdown({
+            	//data: drivers,
+            	label: "Driver",
             	placeholder: "Select Driver...",
             	//default: "ws2801",
-            	onChange: null//function(id, val){ console.log(id + ": " + val);}
+            	onChange: driverChanged
             });
 
-            $("#toggle")._toggle({
-            	label: "Use PySPI",
-            	default: true
+            getDrivers(function(drivers){
+            	_drivers = drivers;
+            	var d = {};
+            	$.each(drivers, function(k,v){
+            		d[k] = v.display;
+            	});
+            	$("#driver_selection")._dropdown().load(d);
             });
 
-            $("#pixels")._nud({
-                label: "# Pixels",
-                placeholder: "Enter number pixels",
-                default: 1,
-                min: 1,
-                max: 5,
-                step: 1
-            });
+            // $("#toggle")._toggle({
+            // 	label: "Use PySPI",
+            // 	default: true
+            // });
 
-            $("#test")._nud({
-                label: "Hello",
-                placeholder: "Enter number",
-                default: 1,
-                min: -5,
-                max: 3,
-                step: 1
-            });
+            // $("#pixels")._nud({
+            //     label: "# Pixels",
+            //     placeholder: "Enter number pixels",
+            //     default: 1,
+            //     min: 1,
+            //     max: 5,
+            //     step: 1
+            // });
+
+            // $("#test")._nud({
+            //     label: "Hello",
+            //     placeholder: "Enter number",
+            //     default: 1,
+            //     min: -5,
+            //     max: 3,
+            //     step: 1
+            // });
 
         });
     </script>
@@ -63,14 +113,14 @@
         <a class="item" data-tab="third">Third</a>
     </div>
     <div class="ui bottom attached active tab segment" data-tab="config">
-    	<div class="ui label pointing right large">Driver</div>
-    	<div id="selDriver"></div>
-    	<div class="ui hidden divider"></div>
+    	<div id="driver_selection"></div>
+    	<div id="param_controls"></div>
+<!--     	<div class="ui hidden divider"></div>
         <div id="toggle"></div>
         <div class="ui hidden divider"></div>
         <div id="pixels"></div>
         <div class="ui hidden divider"></div>
-        <div id="test"></div>
+        <div id="test"></div> -->
     </div>
     <div class="ui bottom attached tab segment" data-tab="second">
         Second
