--- a/gui.html
+++ b/gui.html
@@ -2,16 +2,21 @@
 
 <head>
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes" /> -->
+
+    <link rel="stylesheet" href="css/semantic.min.css">
+    <link rel="stylesheet" href="css/spectrum.css">
+    <link rel="stylesheet" href="css/ui.css">
+    
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.numeric.min.js"></script>
     <script src="js/semantic.min.js"></script>
+    <script src="js/spectrum.js"></script>
     <script src="js/ui.js"></script>
     <script src="js/api.js"></script>
     <script src="js/api.calls.js"></script>
     <script src="js/main.js"></script>
 
-    <link rel="stylesheet" href="css/semantic.min.css">
-    <link rel="stylesheet" href="css/ui.css">
+
     <script>
     var _drivers = null;
     var $driver = null;
