--- a/gui.html
+++ b/gui.html
@@ -2,93 +2,100 @@
 
 <head>
     <!-- <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=yes" /> -->
-
     <link rel="stylesheet" href="css/semantic.min.css">
     <link rel="stylesheet" href="css/spectrum.css">
     <link rel="stylesheet" href="css/ui.css">
-    
     <script src="js/jquery.min.js"></script>
     <script src="js/jquery.numeric.min.js"></script>
     <script src="js/semantic.min.js"></script>
     <script src="js/spectrum.js"></script>
     <script src="js/ui.js"></script>
+    <script src="js/core.js"></script>
     <script src="js/api.js"></script>
     <script src="js/api.calls.js"></script>
     <script src="js/main.js"></script>
-
-
+    <script src="js/bp.js"></script>
     <script>
-    var _drivers = null;
-    var $driver = null;
+    // var _drivers = null;
+    // var $driver = null;
 
-    var _controllers = null;
-    var $controller = null;
+    // var _controllers = null;
+    // var $controller = null;
 
-    var _anims = null;
-    var $anims = null;
+    // var _anims = null;
+    // var $anims = null;
 
-    $(document)
-        .ready(function() {
+    // $(document)
+    //     .ready(function() {
 
-            $('.menu .item')
-                .tab();
+    //         $('.menu .item')
+    //             .tab();
 
-            getDrivers(function(drivers) {
-                _drivers = drivers;
-                $driver = $("#driver").param_loader({
-                	data:drivers,
-                	label:"Driver",
-                	placeholder: "Select Driver...",
-                    default: "visualizer"
-                });
-            });
+    //         getDrivers(function(drivers) {
+    //             _drivers = drivers;
+    //             $driver = $("#driver").param_loader({
+    //                 data: drivers,
+    //                 label: "Driver",
+    //                 placeholder: "Select Driver...",
+    //                 default: "visualizer"
+    //             });
+    //         });
 
-            function loadAnimOptions(data){
-                $anims = $("#anims").param_loader({
-                    data: data,
-                    label:"Animation",
-                    placeholder: "Select Animation...",
-                    // default: "matrix"
-                });
-            }
-            getAnims(function(anims) {
-                _anims = anims;
-                loadAnimOptions(null);
-            });
+    //         function loadAnimOptions(data) {
+    //             $anims = $("#anims").param_loader({
+    //                 data: data,
+    //                 label: "Animation",
+    //                 placeholder: "Select Animation...",
+    //                 // default: "matrix"
+    //             });
+    //         }
 
-            function filterAnims(val){
-                loadAnimOptions(_anims[val]);
-            }
+    //         function filterAnims(val) {
+    //             loadAnimOptions(_anims[val]);
+    //         }
 
-            getControllers(function(controllers) {
-                _controllers = controllers;
-                $controller = $("#controller").param_loader({
-                    data:controllers,
-                    label:"Controller",
-                    placeholder: "Select Controller...",
-                    default: "strip",
-                    onChange: filterAnims
-                });
-            });
+    //         getAnims(function(anims) {
+    //             _anims = anims;
+    //             loadAnimOptions(null);
+    //             getControllers(function(controllers) {
+    //                 _controllers = controllers;
+    //                 $controller = $("#controller").param_loader({
+    //                     data: controllers,
+    //                     label: "Controller",
+    //                     placeholder: "Select Controller...",
+    //                     default: "strip",
+    //                     onChange: filterAnims
+    //                 });
 
-            $('.ui.accordion').accordion({exclusive:false});
 
-            $("#start").click(function(){
-            	var driver = $driver.val();
-                var cont = $controller.val();
+    //             });
+    //         });
 
-            	callAPI({action: "startConfig", "driver": driver, "controller": cont}, function(result){
-            		console.log(result);
-            	});
-            });
-        });
+
+    //         $('.ui.accordion').accordion({
+    //             exclusive: false
+    //         });
+
+    //         $("#start").click(function() {
+    //             var driver = $driver.val();
+    //             var cont = $controller.val();
+
+    //             callAPI({
+    //                 action: "startConfig",
+    //                 "driver": driver,
+    //                 "controller": cont
+    //             }, function(result) {
+    //                 console.log(result);
+    //             });
+    //         });
+    //     });
     </script>
 </head>
 
 <body class="inverted">
     <div class="ui top attached tabular menu">
         <a class="active item" data-tab="config">Config</a>
-<!--         <a class="item" data-tab="second">Second</a>
+        <!--         <a class="item" data-tab="second">Second</a>
         <a class="item" data-tab="third">Third</a> -->
     </div>
     <div class="ui bottom attached active tab segment" data-tab="config">
@@ -100,7 +107,7 @@
         <div class="ui hidden divider short"></div>
         <div class="ui button green" id="start">Start Driver</div>
     </div>
-<!--     <div class="ui bottom attached tab segment" data-tab="second">
+    <!--     <div class="ui bottom attached tab segment" data-tab="second">
         Second
     </div>
     <div class="ui bottom attached tab segment" data-tab="third">
